src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>jj_rb_Credit_check_Validity_End__c</fullName>
        <label>Credit check Validity End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>jj_rb_Credit_check_Validity_From__c</fullName>
        <label>Credit check Validity From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>jj_rb_Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>jj_rb_IMS_Customer_Id__c</fullName>
        <externalId>true</externalId>
        <label>IMS Customer Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jj_rb_NHS_Trust__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>NHS Trust</label>
        <referenceTo>jj_rb_NHS_Trust__c</referenceTo>
        <relationshipLabel>Hospitals</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>jj_rb_National_Channel_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>National Channel Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>jj_rb_SAP_Customer_Number__c</fullName>
        <externalId>true</externalId>
        <label>SAP Customer Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jj_rb_SAP_Vendor_Number__c</fullName>
        <label>SAP Vendor Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jj_rb_iConnect_ID__c</fullName>
        <label>iConnect ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>Home_Care_Providers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>jj_rb_SAP_Customer_Number__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.TYPE</field>
            <operation>equals</operation>
            <value>Homecare provider</value>
        </filters>
        <label>Homecare Providers</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Hospitals</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>jj_rb_NHS_Trust__c</columns>
        <columns>jj_rb_iConnect_ID__c</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.TYPE</field>
            <operation>equals</operation>
            <value>Hospital</value>
        </filters>
        <label>*Hospitals</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Retailer_Customers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>jj_rb_National_Channel_Manager__c</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.TYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.TYPE</field>
            <operation>equals</operation>
            <value>Retailer</value>
        </filters>
        <label>Retailer Customers</label>
        <language>en_US</language>
    </listViews>
    <recordTypes>
        <fullName>jj_rb_Homecare_provider</fullName>
        <active>true</active>
        <label>Homecare provider</label>
    </recordTypes>
    <recordTypes>
        <fullName>jj_rb_Retailer</fullName>
        <active>true</active>
        <label>Retailer</label>
    </recordTypes>
    <validationRules>
        <fullName>jj_rb_SAP_CustomerNo_is_numeric</fullName>
        <active>false</active>
        <description>SAP Customer No. should be numeric.</description>
        <errorConditionFormula>AND( OR( ISPICKVAL(Type, &apos;Retailer&apos;) , ISPICKVAL(Type, &apos;Home care provider&apos;) ) , NOT(isnumber( jj_rb_SAP_Customer_Number__c )))</errorConditionFormula>
        <errorDisplayField>jj_rb_SAP_Customer_Number__c</errorDisplayField>
        <errorMessage>SAP Customer No. should be numeric.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>jj_rb_SAP_VendorNo_is_numeric</fullName>
        <active>true</active>
        <description>SAP Vendor No. should be numeric.</description>
        <errorConditionFormula>AND( OR( ISPICKVAL(Type, &apos;Retailer&apos;) , ISPICKVAL(Type, &apos;Homecare provider&apos;) ) , NOT(isnumber(jj_rb_SAP_Vendor_Number__c)))</errorConditionFormula>
        <errorDisplayField>jj_rb_SAP_Vendor_Number__c</errorDisplayField>
        <errorMessage>SAP Vendor No. should be numeric.</errorMessage>
    </validationRules>
</CustomObject>